🚚 b1 ディレクトリ作ってみる

--- a/.textlintrc
+++ b/.textlintrc
@@ -9,11 +9,20 @@
         "periodMark": ". ",
         "allowPeriodMarks": [
           ".",
-          ":"
+          ",",
+          ":",
+          "$$"
         ]
       },
       "no-exclamation-question-mark": false,
-      "no-hankaku-kana": false
+      "no-hankaku-kana": false,
+      "ja-no-weak-phrase": false,
+      "ja-no-successive-word": {
+        "allowOnomatopee": true,
+        "allow": [
+          "…"
+        ]
+      }
     },
     "preset-jtf-style": {
       "1.2.1.句点(。)と読点(、)": false,
