--- a/.textlintrc
+++ b/.textlintrc
@@ -29,7 +29,8 @@
       "3.1.1.全角文字と半角文字の間": false,
       "4.2.7.コロン(：)": false,
       "4.3.1.丸かっこ（）": false,
-      "4.1.3.ピリオド(.)、カンマ(,)": false
+      "4.1.3.ピリオド(.)、カンマ(,)": false,
+      "4.3.2.大かっこ［］": false
     },
     "preset-ja-spacing": {
       "ja-space-between-half-and-full-width": {
